fixing an issue with zimbabwe native language text spilling outside of the text box, also added line height

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ h3.contentHeading{
 
 h4.displayInfo{
     color: rgb(69, 126, 186);
-    font-size: 3.5rem;
+    font-size: 3.3rem;
 }
 
 
